[package]
name = "discortp"
version = "0.3.0"
license = "ISC"
homepage = "https://github.com/FelixMcFelix/discortp"
repository = "https://github.com/FelixMcFelix/discortp.git"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
keywords = ["rtp", "protocol", "parser"]
categories = ["encoding", "multimedia::encoding", "network-programming", "parser-implementations"]
description = "Lightweight, flexible Real-time Transport Protocol (RTP) parsing library."
readme = "README.md"
documentation = "https://docs.rs/discortp"
edition = "2018"

[dependencies]
pnet_macros = "0.28"
pnet_macros_support = "0.28"

[features]
default = ["pnet", "rtp", "rtcp"]
demux = []
discord = []
discord-full = ["default", "demux", "discord"]
pnet = []
rtp = []
rtcp = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
